# smt_learnings

./: circle_squart_triangle_equations.py  readme.md  shirt_tie.py  wood_working.py  xkcd_restaurant_order.py
rust_examples/: Cargo.toml
rust_examples/src/: error.rs  main.rs
