[package]
name = "rust_examples"
version = "0.1.0"
authors = ["modulitos <modulitos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.5.0", features = ["static-link-z3"]}
#z3 = "0.5.0"
